--- a/indico/web/templates/forms/typeahead_widget.html
+++ b/indico/web/templates/forms/typeahead_widget.html
@@ -4,7 +4,8 @@
     <div class="typeahead__container i-form-field-fixed-width" data-tooltip-anchor>
         <div class="typeahead__field">
             <input id="{{ field.id }}" autocomplete="off" class="typeahead" type="text" name="{{ field.name }}"
-                   {%- if field.data is not none -%}value="{{ field._value() }}"{%- endif -%}>
+                   {%- if field.data is not none -%}value="{{ field._value() }}"{%- endif -%}
+                   {{ input_args | html_params }}>
         </div>
     </div>
 {% endblock %}
