--- a/indico/modules/events/registration/templates/management/regform.html
+++ b/indico/modules/events/registration/templates/management/regform.html
@@ -10,109 +10,115 @@
     {% endif %}
 
     <div class="action-box">
-        <div class="section">
-            <div class="icon icon-settings"></div>
-            <div class="text">
-                <div class="label">
-                    {% trans %}General settings{% endtrans %}
+        {% block regform_setup %}
+            <div class="section">
+                <div class="icon icon-settings"></div>
+                <div class="text">
+                    <div class="label">
+                        {% trans %}General settings{% endtrans %}
+                    </div>
+                    {% trans %}Edit settings for this form.{% endtrans %}
                 </div>
-                {% trans %}Edit settings for this form.{% endtrans %}
-            </div>
-            <div class="toolbar">
-                <a href="{{ url_for('.edit_regform', regform) }}" class="i-button icon-edit">
-                    {% trans %}Edit{% endtrans %}
-                </a>
-            </div>
-        </div>
-
-        <div class="section">
-            <div class="icon icon-clipboard"></div>
-            <div class="text">
-                <div class="label">
-                    {% trans %}Registration Form{% endtrans %}
-                </div>
-                {% trans %}Add, remove or modify information registrants may fill out.{% endtrans %}
-            </div>
-            <div class="toolbar">
-                <a href="{{ url_for('.modify_regform', regform) }}" class="i-button icon-settings">
-                    {% trans %}Configure{% endtrans %}
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <div class="action-box">
-        <div class="section">
-            <div class="icon icon-users"></div>
-            <div class="text">
-                <div class="label">
-                    {% trans %}List of registrations{% endtrans %}
-                </div>
-                {% trans %}Add, remove or modify registrations.{% endtrans %}
-            </div>
-            <div class="toolbar">
-                <div class="group">
-                    <span class="i-button label icon-user" title="{% trans %}Total registrations{% endtrans %}">
-                        {{ regform.existing_registrations_count }}
-                        {%- if regform.registration_limit %}
-                            / {{ regform.registration_limit }}
-                        {%- endif -%}
-                    </span>
-                </div>
-                <div class="group">
-                    <a href="{{ url_for('.manage_reglist', regform) }}" class="i-button icon-settings">
-                        {% trans %}Manage{% endtrans %}
+                <div class="toolbar">
+                    <a href="{{ url_for('.edit_regform', regform) }}" class="i-button icon-edit">
+                        {% trans %}Edit{% endtrans %}
                     </a>
                 </div>
             </div>
-        </div>
 
-        <div class="section">
-            <div class="icon icon-mail"></div>
-            <div class="text">
-                <div class="label">
-                    {% trans %}Invitations{% endtrans %}
+            <div class="section">
+                <div class="icon icon-clipboard"></div>
+                <div class="text">
+                    <div class="label">
+                        {% trans %}Registration Form{% endtrans %}
+                    </div>
+                    {% trans %}Add, remove or modify information registrants may fill out.{% endtrans %}
                 </div>
-                {% trans %}Manage invitations to register for your event.{% endtrans %}
-            </div>
-            <div class="toolbar">
-                <a href="{{ url_for('.invitations', regform) }}" class="i-button icon-settings">
-                    {% trans %}Manage{% endtrans %}
-                </a>
-            </div>
-        </div>
-        <div class="section">
-            <div class="icon icon-ticket"></div>
-            <div class="text">
-                <div class="label">
-                    {% trans %}Tickets{% endtrans %}
-                </div>
-                {% trans %}Configure ticketing system{% endtrans %}
-            </div>
-
-            <div class="toolbar">
-                <div class="group">
-                    <a id="qr-code" class="i-button icon-qrcode"
-                       style="{{ 'display: none;' if not regform.tickets_enabled }}"
-                       data-href="{{ url_for('.tickets_qrcode', regform) }}"
-                       title="In order to configure your mobile app to use this event, you will have to scan the QR code">
-                        {% trans %}QR Code{% endtrans %}
-                    </a>
-                    <a href="#" id="qr-code-config" class="i-button icon-settings"
-                       data-href="{{ url_for('.tickets', regform) }}"
-                       data-title="{%- trans %}Configure tickets{% endtrans -%}"
-                       data-ajax-dialog>
+                <div class="toolbar">
+                    <a href="{{ url_for('.modify_regform', regform) }}" class="i-button icon-settings">
                         {% trans %}Configure{% endtrans %}
                     </a>
                 </div>
             </div>
-        </div>
+        {% endblock %}
+    </div>
+
+    <div class="action-box">
+        {% block registrant_actions %}
+            <div class="section">
+                <div class="icon icon-users"></div>
+                <div class="text">
+                    <div class="label">
+                        {% trans %}List of registrations{% endtrans %}
+                    </div>
+                    {% trans %}Add, remove or modify registrations.{% endtrans %}
+                </div>
+                <div class="toolbar">
+                    <div class="group">
+                        <span class="i-button label icon-user" title="{% trans %}Total registrations{% endtrans %}">
+                            {{ regform.existing_registrations_count }}
+                            {%- if regform.registration_limit %}
+                                / {{ regform.registration_limit }}
+                            {%- endif -%}
+                        </span>
+                    </div>
+                    <div class="group">
+                        <a href="{{ url_for('.manage_reglist', regform) }}" class="i-button icon-settings">
+                            {% trans %}Manage{% endtrans %}
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="section">
+                <div class="icon icon-mail"></div>
+                <div class="text">
+                    <div class="label">
+                        {% trans %}Invitations{% endtrans %}
+                    </div>
+                    {% trans %}Manage invitations to register for your event.{% endtrans %}
+                </div>
+                <div class="toolbar">
+                    <a href="{{ url_for('.invitations', regform) }}" class="i-button icon-settings">
+                        {% trans %}Manage{% endtrans %}
+                    </a>
+                </div>
+            </div>
+            <div class="section">
+                <div class="icon icon-ticket"></div>
+                <div class="text">
+                    <div class="label">
+                        {% trans %}Tickets{% endtrans %}
+                    </div>
+                    {% trans %}Configure ticketing system{% endtrans %}
+                </div>
+
+                <div class="toolbar">
+                    <div class="group">
+                        <a id="qr-code" class="i-button icon-qrcode"
+                           style="{{ 'display: none;' if not regform.tickets_enabled }}"
+                           data-href="{{ url_for('.tickets_qrcode', regform) }}"
+                           title="In order to configure your mobile app to use this event, you will have to scan the QR code">
+                            {% trans %}QR Code{% endtrans %}
+                        </a>
+                        <a href="#" id="qr-code-config" class="i-button icon-settings"
+                           data-href="{{ url_for('.tickets', regform) }}"
+                           data-title="{%- trans %}Configure tickets{% endtrans -%}"
+                           data-ajax-dialog>
+                            {% trans %}Configure{% endtrans %}
+                        </a>
+                    </div>
+                </div>
+            </div>
+        {% endblock %}
     </div>
     {{ template_hook('extra-regform-settings', regform=regform) }}
     <div class="toolbar right">
-        <a class="i-button icon-chart" href="{{ url_for('.regform_stats', regform) }}">
-            {% trans %}Stats{% endtrans %}
-        </a>
+        {% block regform_stats_button %}
+            <a class="i-button icon-chart" href="{{ url_for('.regform_stats', regform) }}">
+                {% trans %}Stats{% endtrans %}
+            </a>
+        {% endblock %}
     </div>
     <script>
         (function() {
