BACKPORT Prevent ParserError on invalid date strings

--- a/indico/modules/categories/templates/display/calendar.html
+++ b/indico/modules/categories/templates/display/calendar.html
@@ -40,6 +40,6 @@
         <div id="event-calendar"></div>
     </div>
     <script>
-        setupCategoryCalendar('#event-calendar', {{ url_for('categories.calendar', category) | tojson }});
+        setupCategoryCalendar('#event-calendar', {{ url_for('categories.calendar_events', category) | tojson }});
     </script>
 {% endblock %}
