--- a/indico/modules/categories/templates/display/event_list.html
+++ b/indico/modules/categories/templates/display/event_list.html
@@ -128,6 +128,7 @@
                                         {%- trans %}new{% endtrans -%}
                                     </span>
                                 {% endif %}
+                                {{ template_hook('event-status-labels', event=event) }}
                             </span>
                             {% if event.label %}
                                 <span class="ui label basic mini {{ event.label.color }}"
