Warn users of session expiration

--- a/indico/web/templates/footer.html
+++ b/indico/web/templates/footer.html
@@ -1,3 +1,5 @@
+{% from 'core/session_expiration.html' import setup_session_expiration %}
+
 <div class="footer {{ 'dark' if dark|default(false) }}">
     {% block footer -%}
         {%- set indico -%}
@@ -40,6 +42,7 @@
                 {% endblock %}
             </div>
         </div>
+        {{ setup_session_expiration() }}
     {% endblock %}
 </div>
 
